force-app/main/default/objects/Order/fields/After_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>After_Discount_Price__c</fullName>
    <label>After Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>